# email-inbox-env

./: Dockerfile  README.md  app.py  dashboard.html  inference.py  login.html  openenv.yaml  pyproject.toml  requirements.txt  server.py
data/: emails.json
email_inbox_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
env/: __init__.py  email_env.py  grader.py  models.py  tasks.py
server/: app.py
