[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-inbox-env"
version = "0.1.0"
description = "RL environment for managing email inbox tasks such as spam detection, prioritization, and organization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "openenv-core",
    "torch"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
include = ["env*", "server*"]
